--- a/P 05.02/index.html
+++ b/P 05.02/index.html
@@ -6,13 +6,18 @@
     </head>
     <body>
         <header>
+            <img src="" alt="">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#"></a></li>
+            </ul>
 
         </header>
         <section>
 
         </section>
         <footer>
-            
+
         </footer>
     </body>
 </html>
