--- a/P 05.02/index.html
+++ b/P 05.02/index.html
@@ -8,13 +8,38 @@
         <header>
             <img src="" alt="">
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#"></a></li>
+                <li>
+                    <a href="#">
+                        home
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        work
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        blog
+                    </a>
+                </li>
+                <li>
+                    <a href="#">contact</a>
+                </li>
             </ul>
+            <h1><p></p></h1>
 
         </header>
         <section>
 
+        </section>
+        <section>
+            
         </section>
         <footer>
 
