--- a/P 05.02/index.html
+++ b/P 05.02/index.html
@@ -1,48 +1,69 @@
-<!DOCTYPE>
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>my page </title>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Cuda</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+        <script src="main.js"></script>
+        <style>
+            header{
+                background-color: blueviolet;
+                padding: 0px;
+            }
+            section{
+                background-color: skyblue;
+                padding: 0px;
+            }
+            footer{
+                background-color: white;
+            }
+        </style>
     </head>
     <body>
         <header>
-            <img src="" alt="">
+            <img src="cu.JPG" alt="cuda">
             <ul>
-                <li>
-                    <a href="#">
-                        home
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        work
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        blog
-                    </a>
-                </li>
-                <li>
-                    <a href="#">contact</a>
-                </li>
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>WORK</li>
+                <li>BLOG</li>
+                <li>CONTACT</li>
             </ul>
-            <h1><p></p></h1>
-
+            <h1>Hi there!We are the new kids on the block
+                and we build awesome website and mobile app.</h1>
+                <button>work with us!</button>
         </header>
         <section>
-
-        </section>
-        <section>
-            
+            <div>
+                <h2>SERVICES WE PROVIDE</h2>
+                <p>We are working with both individuals and businesses from all over globe to 
+                    create awesome websites and application.</p>
+            </div>
+            <div>
+                <img src="bra.JPG" alt="branding">
+                <h2>BRANDING</h2>
+                <h3>Lorem ipsum dolor sit amet, consectuer adipiscing elit, sed diam nonummy nibh.</h3>
+            </div>
+            <div>
+                <img src="de.JPG" alt="design">
+                <h2>DESIGN</h2>
+                <h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</h3>
+            </div>
+            <div>
+                <img src="se.JPG" alt="development">
+                <h2>DEVELOPMENT</h2>
+                <h3>At vero et accusamus et iusto odio dignissimos qui blanditiis praesentium.</h3>
+            </div>
+            <div>
+                <img src="ro.JPG" alt="rockek science">
+                <h2>Rocket Science</h2>
+                <h3>Et harum quidem rerum est et expedita distinction. Nam libero tempore.</h3>
+            </div>
         </section>
         <footer>
-
+            <h1>MEET OUR BEAUTIFUL TEAM</h1>
         </footer>
     </body>
 </html>
