--- a/P 22.02/index.html
+++ b/P 22.02/index.html
@@ -65,64 +65,91 @@
             </nav>
         </div>
     </header>
-    <!-- section 1 with background -->
+    <!-- background 1 -->
     <section>
-        <div id="shawol-one" class="container">
-            <div class="d-flex align-items-center justify-content-center">
-                <div class="testi-content text-center">
-                    <h2>IMPROVE YOUR BUSINESS AND </h2>
-                    <p>Are you a business owner in food service industry? Let Ecopak to show you how to grow your business by using our quality Eco-Friendly Utensils!</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- section 2 with out background -->
-    <section>
-        <div id="shawol-two" class="container">
-            <div class="row justify-content-center align-items-center">
-
-                <div class="col-md-8">
-                    <div class="banner-warp text-center">
-                        <h2>ABOUT EARTHPAK</h2>
-                        <h6>An Environmental Friendly Business</h6>
-                        <p>Earthpak is proud to introduce a variety of environmental friendly products. By using these compostable food service wares, we hope to reduce the environmental impacts one step at a time. Please check out our products. If you require
-                            further assistance, please send us your inquiries.</p>
+        <div id="shawol-one">
+            <div class="container">
+                <div class="d-flex align-items-center justify-content-center">
+                    <div class="testi-content text-center">
+                        <h2>IMPROVE YOUR BUSINESS AND </h2>
+                        <p>Are you a business owner in food service industry?<br/>Let Ecopak to show you how
+                            <br/> to grow your business by using our quality Eco-Friendly Utensils! </p>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
+    <!-- background 2 -->
     <section>
-        <div id="shawol-three" class="container">
-            <div class="row justify-content-center align-items-center">
-                <div>
-                    <img src="img/secend-logo.png" alt="logo">
-                </div>
-
-                <div class="col-md-8">
-                    <div class="banner-warp text-center">
-                        <h2>ABOUT EARTHPAK</h2>
-                        <h6>An Environmental Friendly Business</h6>
-                        <p>Earthpak is proud to introduce a variety of environmental friendly products. By using these compostable food service wares, we hope to reduce the environmental impacts one step at a time. Please check out our products. If you require
-                            further assistance, please send us your inquiries.</p>
+        <div id="shawol-two">
+            <div class="container">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-md-8">
+                        <div class="banner-warp text-center">
+                            <h2>ABOUT EARTHPAK</h2>
+                            <h6>An Environmental Friendly Business</h6>
+                            <p>Earthpak is proud to introduce a variety of environmental friendly products. By using these compostable food service wares, we hope to reduce the environmental impacts one step at a time. Please check out our products. If you
+                                require further assistance, please send us your inquiries.</p>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
-    <!-- section 3 with miter -->
-    <section>
-        <div id="shawol-four" class="container">
-            <div class="row">
 
-                <div class="col-md-8">
+    <!-- background 3 -->
+    <section>
+        <div id="shawol-three">
+            <div class="container">
+                <div class="row justify-content-center align-items-center">
                     <div>
-                        <h2>ABOUT EARTHPAK</h2>
-                        <h6>An Environmental Friendly Business</h6>
-                        <p>Earthpak is proud to introduce a variety of environmental friendly products. By using these compostable food service wares, we hope to reduce the environmental impacts one step at a time. Please check out our products. If you require
-                            further assistance, please send us your inquiries.</p>
+                        <img src="img/secend-logo.png" alt="logo">
                     </div>
 
+                    <div class="col-md-8">
+                        <div class="banner-warp text-center">
+                            <h2>High quality Eco-Packaging</h2>
+                            <p>To ensure that the products you buy and use are truly compostable, the Biodegradable Products Institute (BPI) created an innovative certification program in 1999. At Eco-Packaging, we offer wide variety of BPI certified products
+                                that met the American Society for Testing and Materials (ASTM) standards to certify products as true compostable.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- background 3 -->
+    <!-- background 4 -->
+    <section>
+        <div id="shawol-four">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div>
+                            <h2>ABOUT EARTHPAK</h2>
+                            <h6>An Environmental Friendly Business</h6>
+                            <p>Earthpak is proud to introduce a variety of environmental friendly products. By using these compostable food service wares, we hope to reduce the environmental impacts one step at a time. Please check out our products. If you
+                                require further assistance, please send us your inquiries.</p>
+                        </div>
+                        <div class="col">
+                            <div class="row">
+                                <div class="col">
+                                    <label>RECYCLE</label>
+                                    <input type="range" name="recycle" value="10">
+                                </div>
+                                <div class="col">
+                                    <label>REUSE</label>
+                                    <input type="range" name="reuse" value="20">
+                                </div>
+                                <div class="col">
+                                    <label>REDUCE</label>
+                                    <input type="range" name="reduce" value="30">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -135,15 +162,24 @@
                 <div class="col">
                     <img src="img/a1.jpg" alt="not found">
                     <h3>RECYCLE</h3>
+                    <p>Choosing recycled or compostable disposable cups, forks and utensils means reducing waste and protecting the earth.
+                    </p>
+                    <a href="#">LEARN MORE></a>
                 </div>
                 <div class="col">
                     <img src="img/a2.jpg" alt="not found">
                     <h3>REUSE</h3>
+                    <p>The highest quality utensils that allow you to re-use and re-purpose each foodware, this will increase the safety and branding for your business!
+                    </p>
+                    <a href="#">LEARN MORE></a>
 
                 </div>
                 <div class="col">
                     <img src="img/a3.jpg" alt="not found">
                     <h3>REDUCE</h3>
+                    <p>Reduce the waste, and cut your costs! Reducing disposable utensils. (as well as dishware and cups) dramatically reduces the costs associated with consistently purchasing disposable items.
+                    </p>
+                    <a href="#">LEARN MORE></a>
 
                 </div>
 
@@ -153,7 +189,7 @@
 
     <!-- footer  -->
     <footer class="footer">
-        <div id="MainFooter" class="container">
+        <div id="main-footer" class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-4">
                     <img src="img/footer-logo.png" alt="logo not find">
@@ -190,7 +226,7 @@
             </div>
 
         </div>
-        <div id="DownFooter">
+        <div id="down-footer">
             <div class="container">
                 <div class=" justify-content-center align-items-center">
                     <div class="banner-warp text-center">
